bk_ida/gccida/g2/insert_one_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insert_one_insn/src/caller-save.c:1275:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)chain->insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insert_one_insn/src/caller-save.c:1302:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( unsigned int)( mode_class_0[v11] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insert_one_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/insert_one_insn/src/obj/caller-save.o] Error 1
